--- a/src/app/components/product.component.html
+++ b/src/app/components/product.component.html
@@ -5,5 +5,6 @@
   <p>{{ product.description | slice:0:10 }}</p>
   <p>{{ today | date:'hh:mm:ss a' }}</p>
   <button (click)="addCart()">Agregar al carrito</button>
+  <a [routerLink]="['/products', product.id]">Ver detalle</a>
 </div>
 
